List-view style

--- a/app/src/main/res/layout/activity_rss_list_view.xml
+++ b/app/src/main/res/layout/activity_rss_list_view.xml
@@ -5,9 +5,12 @@
     android:orientation="vertical" >
 
     <ListView
+
         android:id="@+id/listMainView"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:choiceMode="none"
+        android:clickable="false">
     </ListView>
 
 </LinearLayout>
