--- a/app/src/main/res/layout/activity_display_web_view.xml
+++ b/app/src/main/res/layout/activity_display_web_view.xml
@@ -6,5 +6,7 @@ android:orientation="vertical">
 <WebView
     android:id="@+id/webView"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"/>
+    android:layout_height="fill_parent"
+    android:background="#eaeaea"
+    />
 </LinearLayout>
